[#46] Fix: 예산 등록 시 기본 타입의 ConsumptionCategory 정보 저장되도록 수정